uptime/uptimework/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptimework
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uptimework
  template:
    metadata:
      labels:
        app: uptimework
    spec:
      containers:
        - name: uptimework
          image: louislam/uptime-kuma:2.4.0
          ports:
            - containerPort: 3001
          volumeMounts:
            - name: data-volume
              mountPath: /app/data
              readOnly: false
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: uptimework-data-pvc
