uptime/uptimework/service.yml
apiVersion: v1
kind: Service
metadata:
  name: uptimework-service
spec:
  selector:
    app: uptimework
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
